@@ -356,6 +356,10 @@ Working version
   defined.
   (David Allsopp)
 
+- #9031: Unregister Windows stack overflow handler while shutting
+  the runtime down.
+  (Dmitry Bely, review by David Allsopp)
+
 OCaml 4.09 maintenance branch:
 ------------------------------
 
